<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:background="@color/white"
    android:paddingBottom="15dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="13dp"
             android:background="@drawable/bg_rect_profil"
             android:paddingBottom="15dp"
             >
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/statut"
              android:layout_marginTop="30dp"
              android:textColor="@color/black"
              android:paddingLeft="15dp"
              android:textSize="15sp"
              android:textStyle="bold"
              />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:text="pro"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abonnement"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:text="Offre annuelle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prochaine_echeance"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:text="20/11/2020"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon_abonnement"
            android:textColor="@color/colorPrimaryBlue"
            android:background="@color/white"
            android:layout_marginLeft="5dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textSize="16sp"
            />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_btn"
        android:layout_marginTop="15dp"
        android:text="@string/m_abonner"
        android:textColor="@color/white"
        >
    </Button>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="13dp"
            android:background="@drawable/bg_rect_profil"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_de_carte"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:text="00214587452"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:text="ALBERT"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenom"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:text="MIGUEL ANDRE DOMINIQUE"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_de_naissance"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txtBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:text="21/05/1977"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_personnel"
            android:textColor="@color/colorPrimaryBlue"
            android:background="@color/white"
            android:layout_marginLeft="5dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textSize="16sp"
            />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_btn"
        android:layout_marginTop="15dp"
        android:text="@string/recuperation_de_donnees"
        android:textColor="@color/white"
        >
    </Button>
    <Button
        android:id="@+id/btnDeconnecter"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_btn_empty"
        android:text="@string/se_d_connecter"
        android:textColor="@color/colorPrimaryBlue"
        android:layout_marginTop="10dp"
         />
</LinearLayout>
</ScrollView>