<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/transparent_dialog"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_exit"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimaryBlue"
            android:text="@string/se_d_connecter"
            android:textSize="25dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/en_cliquant_sur_valider_toutes_les_donn_es_relatives_au_compte_seront_effac_es"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/annuler"
                android:textColor="@color/colorPrimaryBlue"
                android:background="@drawable/bg_btn_empty"
                android:layout_marginEnd="5dp"
                />
            <Button
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/valider"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>