<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_dialog"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_exit"
            android:layout_gravity="end"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/bienvenue"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryBlue"
            android:textStyle="bold"
            android:textAllCaps="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/pour_commencer"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryBlue"
            android:textStyle="normal"
            />
        <Button
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanner_les_donnees"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/btnAddDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajouter_des_documents"
            android:textColor="@color/colorPrimaryBlue"
            android:background="@drawable/bg_btn_empty"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>