<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/transparent_dialog"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_exit"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimaryBlue"
            android:text="@string/message_d_avertissement"
            android:textSize="25dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/cette_version_de_strada_driver_est_en_cours_de_d_veloppement_par_cons_quent_certaines_fonctionnalit_s_ne_sont_pas_encore_disponibles_n_merci_de_votre_compr_hension_gardez_un_oeil_sur_les_mises_jour"
            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <Button
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/j_ai_compris"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>